[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "macros"] }
